# pycon

./: .codecov.yml  .dockerignore  .editorconfig  .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  .prettierrc  .tool-versions  .vercelignore  CLAUDE.md  Dockerfile.db_dump  Dockerfile.node.local  Dockerfile.python.local  Dockerfile.python311.local  Earthfile  LICENSE  README.md  _eslintrc  biome.json  db-superuser.sql  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  main.code-workspace  netlify.toml  nginx.conf  package.json  pnpm-lock.yaml  tasks.py  ticketsimport.py  update_hetzner_firewall.py
association-backend/: .env.sample  Dockerfile  Earthfile  README.md  TODO.md  main.py  pyproject.toml
association-backend/alembic/: env.py
association-backend/api/: context.py  query.py  schema.py  views.py
association-backend/association/: db.py  settings.py
association-backend/database/: db.py
association-backend/scripts/: db_utils.py  prepare_db.py
association-backend/tests/: prepare_db.py
association-backend/webhooks/: handlers.py  views.py
association_backend/: .env.sample  README.md  TODO.md  appunti.md  main.py  pyproject.toml  stripe.ipynb
association_backend/alembic/: env.py
association_backend/association/: db.py  settings.py
association_backend/tests/: db_utils.py  prepare_db.py
backend/: .codecov.yml  .coveragerc  .dockerignore  .earthignore  .env.copy  .env.sample  .flake8  .gitignore  .pylintrc  Dockerfile  Dockerfile.lambda  Dockerrun.aws.json  Earthfile  README.md  asgi_handler.py  conftest.py  docker-compose.yml  docker-compose_dev.yml  entrypoint.sh  manage.py  pyproject.toml  pytest.ini  schema.graphql  serverless_wsgi.py  sqs_messages.py  worker.py  wsgi_handler.py
backend/api/: apps.py  context.py  extensions.py  forms.py  models.py  mutations.py  pagination.py  permissions.py  scalars.py  schema.py  settings.py  types.py  utils.py  views.py
backend/association/: admin.py  apps.py  filters.py  managers.py  models.py
backend/association_membership/: admin.py  apps.py  enums.py  models.py  permissions.py  tasks.py  urls.py  views.py
backend/badge_scanner/: admin.py  models.py
backend/badges/: admin.py  models.py  roles.py
backend/billing/: admin.py  constants.py  exceptions.py  managers.py  models.py  validation.py
backend/blob/: confirmation.py  upload.py  url_parsing.py
backend/blog/: admin.py  models.py  schema.py  types.py
backend/checklist/: admin.py  apps.py  models.py
backend/cms/: admin.py  mixins.py  models.py  translator.py
backend/community/: admin.py  apps.py  models.py
backend/conferences/: admin.py  apps.py  dummystuff  forms.py  frontend.py  models.py  mutations.py  querysets.py  schema.py  tasks.py  types.py  vouchers.py
backend/countries/: __init__.py  apps.py  constants.py  countries.py  filters.py  models.py  types.py
backend/custom_admin/: SPEC-schedule-builder-radix.md  admin.py  astro.config.mjs  audit.py  backends.py  codegen.ts  context_processors.py  index.py  package.json  pnpm-lock.yaml  template_backends.py  tsconfig.json  urls.py  views.py  widgets.py
backend/custom_auth/: backend.py
backend/custom_wagtail/: apps.py  middleware.py
backend/demodata/: api.json  blog.json  cms.json  conferences.json  events.json  hotel-rooms.json  pages.json  sponsors.json  submissions.json
backend/django_admin_api/: apps.py  permissions.py  schema.py  views.py
backend/domain_events/: handler.py  publisher.py
backend/domain_messages/: handler.py  publisher.py
backend/donations/: admin.py  models.py
backend/email_speakers/: admin.py  apps.py  models.py
backend/emails/: templates.py
backend/events/: admin.py  models.py
backend/files_upload/: admin.py  apps.py  config.py  confirmation.py  constants.py  enum.py  models.py  tasks.py  upload.py  url_parsing.py  urls.py  views.py
backend/google_api/: admin.py  apps.py  exceptions.py  models.py  sdk.py
backend/grants/: admin.py  forms.py  models.py  summary.py  tasks.py  urls.py  views.py
backend/graphene_form/: converter.py  forms.py  mutations.py  utils.py
backend/healthchecks/: apps.py  urls.py  views.py
backend/helpers/: constants.py  models.py  unique_slugify.py
backend/homepage/: models.py
backend/hotels/: admin.py  models.py
backend/i18n/: fields.py  forms.py  serializers.py  strings.py
backend/integration_tests/: conftest.py
backend/integrations/: flodesk.py  mailchimp.py  permissions.py  plain.py  plain_cards.py  serializers.py  slack.py  tasks.py  urls.py  views.py
backend/invoices/: admin.py  constants.py  models.py  utils.py
backend/job_board/: admin.py  models.py
backend/languages/: admin.py  apps.py  languages.py  models.py  types.py
backend/newsletters/: admin.py  aws.py  exporter.py  forms.py  models.py
backend/notifications/: aws.py  emails.py  models.py  permissions.py  querysets.py  rendered_email_template.py  tasks.py  template_utils.py  templates.py  urls.py  views.py
backend/orders/: admin.py  apps.py  enums.py  models.py  types.py
backend/organizers/: admin.py  apps.py  models.py
backend/pages/: admin.py  models.py  schema.py  types.py
backend/participants/: admin.py  apps.py  models.py
backend/payments/: admin.py  apps.py  converter.py  errors.py  exceptions.py  fields.py  forms.py  models.py  mutations.py  types.py  urls.py
backend/pretix/: __init__.py  db.py  exceptions.py  types.py  utils.py
backend/privacy_policy/: apps.py  models.py  record.py
backend/pycon/: celery.py  celery_utils.py  constants.py  db_utils.py  dbos_app.py  dbos_workflows.py  middleware.py  signing.py  storages.py  tasks.py  urls.py  views.py  wsgi.py
clamav-rest/: README.md  pyproject.toml
cli/: cli.py  pyproject.toml
cms/: .coveragerc  .dockerignore  .pdm.toml  Dockerfile  conftest.py  manage.py  pyproject.toml
cms/api/: schema.py  (+2 more)
toolkit/: README.md  pyproject.toml
users/: .dockerignore  Dockerfile  Makefile  alembic.ini  main.py  pyproject.toml  settings.py  tasks.py
users-backend/: .dockerignore  .env.sample  Dockerfile  Earthfile  main.py  pyproject.toml
(+4283 files in other folders)
