[tool.poetry]
name = "association"
version = "0.1.0"
description = "Association Backend Service"
authors = ["Python Italia"]

[tool.poetry.dependencies]
python = "^3.11"
starlette = "^0.30.0"
uvicorn = "^0.13.3"
click = "7.1.2"
invoke = "1.5.0"
strawberry-graphql = "^0.90"
alembic = "^1.5.2"
asyncpg = "^0.28.0"
PyJWT = "^2.8.0"
pydantic = "^1.7.3"
httpx = "^0.24.1"
stripe = "^2.55.2"
email-validator = "^1.1.2"
websockets = "^8.1"
time-machine = "^2.1.0"
python-dateutil = "^2.8.1"
pythonit-toolkit = "0.1.88"
ormar = "0.11.1"
mangum = "^0.11.0"
sentry-sdk = "^1.1.0"
awslambdaric = {version = "^2.0.4", optional = true}
psycopg2 = "^2.9.5"


[tool.poetry.extras]
lambda = ["awslambdaric"]

[tool.poetry.group.dev.dependencies]
coverage = "^7.2.7"
ward = "^0.67.2b0"
time-machine = "^2.11.0"
pdbpp = "^0.10.3"
requests = "^2.31.0"
factory-boy = "^3.3.0"
taskipy = "^1.11.0"
asgi-lifespan = "^2.1.0"
Faker = "^19.2.0"
respx = "^0.20.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.taskipy.tasks]
server = "uvicorn main:wrapped_app --port 8060 --reload"
test = "RUNNING_TESTS=1 python scripts/prepare_db.py && RUNNING_TESTS=1 coverage run -m ward"
"test:coverage" = "task test || coverage xml -i && coverage xml -i"
migrate = "alembic upgrade head"
makemigrations = "alembic revision --autogenerate -m"
