[tool.poetry]
name = "association"
version = "0.1.0"
description = "Association Backend Service"
authors = ["Gaetano D'Onghia <gaetanodonghia@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
starlette = "^0.14.1"
uvicorn = "^0.13.3"
click = "7.1.2"
invoke = "1.5.0"
strawberry-graphql = "^0.45.1"
SQLAlchemy = "1.4.0b1"
alembic = "^1.5.2"
asyncpg = "^0.21.0"
PyJWT = "^2.0.1"
pydantic = "^1.7.3"
httpx = "^0.16.1"
stripe = "^2.55.2"
email-validator = "^1.1.2"
websockets = "^8.1"
psycopg2 = "^2.8.6"
time-machine = "^2.1.0"
python-dateutil = "^2.8.1"


[tool.poetry.dev-dependencies]
factory-boy = "^3.2.0"
isort = "^5.7.0"
flake8 = "^3.8.4"
ward = "^0.48.0-beta.0"
requests = "^2.25.1"
taskipy = "^1.6.0"
asgi-lifespan = "^1.0.1"
coverage = "^5.4"
time-machine = "^2.0.1"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.taskipy.tasks]
server = "uvicorn main:app --port 8060 --reload"
test = "RUNNING_TESTS=1 python tests/prepare_db.py && RUNNING_TESTS=1 coverage run -m ward"
"test:coverage" = "task test || coverage xml -i && coverage xml -i"
"test:debug" = "task test --no-capture-output"
migrate = "alembic upgrade head"
makemigrations = "alembic revision --autogenerate -m"