[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "mypy<2.0.0,>=1.2.0",
    "typer<1.0.0,>=0.9.0",
    "pylint==3.0.2",
    "pylint-django==2.5.5",
    "pytest==7.4.3",
    "pytest-cov==4.1.0",
    "pytest-django==4.6.0",
    "pytest-pylint==0.21.0",
    "pytest-factoryboy==2.6.0",
    "factory-boy==3.3.0",
    "pdbpp<1.0.0,>=0.10.3",
    "flake8<7.0.0,>=6.1.0",
    "black==23.10.1",
    "requests-mock<2.0.0,>=1.11.0",
    "pytest-mock<4.0.0,>=3.12.0",
    "pytest-cache<2.0,>=1.0",
    "time-machine<3.0.0,>=2.13.0",
    "rich<14.0.0,>=13.6.0",
    "libcst<2.0.0,>=1.1.0",
    "wagtail-factories<5.0.0,>=4.1.0",
]

[tool.pdm.build]
includes = []
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.ruff]
line-length = 88
exclude = ["migrations"]
target-version = "py311"

[project]
authors = [
    {name = "Python Italia"},
]
requires-python = ">=3.11,<4.0"
dependencies = [
    "Django==4.2.7",
    "django-environ==0.10.0",
    "django-model-utils==4.1.1",
    "pytz==2023.3.post1",
    "django-timezone-field==4.0",
    "django-fsm==2.6.1",
    "certifi==2021.10.8",
    "chardet==3.0.4",
    "idna==2.8",
    "requests==2.26.0",
    "urllib3>=1.25.7",
    "aniso8601==8.0.0",
    "whitenoise==5.2.0",
    "django-ordered-model==3.5",
    "uWSGI==2.0.21",
    "django-storages[azure]<2.0.0,>=1.13.2",
    "sentry-sdk==1.32.0",
    "boto3<2.0.0,>=1.28.78",
    "pycountry<20.0,>=19.8",
    "countries<1.0.0,>=0.2.0",
    "django-ses<2.0.0,>=1.0.3",
    "hashids<2.0.0,>=1.2.0",
    "django-autocomplete-light==3.9.4",
    "django-queryinspect<2.0.0,>=1.1.0",
    "lxml<5.0.0,>=4.5.0",
    "unidecode<2.0.0,>=1.1.1",
    "jsonschema<4.0.0,>=3.2.0",
    "strawberry-graphql==0.211.1",
    "Werkzeug<2.0.0,>=1.0.1",
    "pythonit-toolkit==0.1.92",
    "django-import-export<4.0.0,>=3.2.0",
    "azure-identity<2.0.0,>=1.12.0",
    "azure-storage-blob<13.0.0,>=12.14.1",
    "dal-admin-filters==1.1.0",
    "django-markdownify<1.0.0,>=0.9.2",
    "psycopg2<3.0.0,>=2.9.5",
    "django-imagekit<5.0.0,>=4.1.0",
    "pillow<11.0.0,>=10.0.1",
    "redis[hiredis]<5.0.0,>=4.5.5",
    "google-api-python-client<3.0.0,>=2.94.0",
    "google-auth<3.0.0,>=2.22.0",
    "google-auth-oauthlib<2.0.0,>=1.0.0",
    "google-auth-httplib2<1.0.0,>=0.1.0",
    "temporalio==1.4.0",
    "opencv-python<5.0.0.0,>=4.8.0.74",
    "argon2-cffi<24.0.0,>=23.1.0",
    "stripe<8.0.0,>=7.0.0",
    "djangorestframework<4.0.0,>=3.14.0",
    "l18n<2022.0,>=2021.3",
    "wagtail==5.1.3",
    "wagtail-localize==1.5.2",
    "celery>=5.3.6",
    "opentelemetry-api>=1.22.0",
    "opentelemetry-sdk>=1.22.0",
    "celery-redbeat>=2.2.0",
]
name = "backend"
version = "0.1.0"
description = "PyCon Italia backend"
license = {text = "MIT"}

[tool.pdm.scripts]
update-lock = "pdm lock -G :all"

[project.optional-dependencies]
lambda = [
    "awslambdaric<3.0.0,>=2.0.4",
]
