[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.ruff]
line-length = 88
exclude = ["migrations"]
target-version = "py311"

[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "mypy<2.0.0,>=1.2.0",
    "pytest==7.4.3",
    "pytest-cov==4.1.0",
    "pytest-django==4.6.0",
    "pytest-factoryboy==2.6.0",
    "factory-boy==3.3.0",
    "pdbpp<1.0.0,>=0.10.3",
    "requests-mock<2.0.0,>=1.11.0",
    "pytest-mock<4.0.0,>=3.12.0",
    "pytest-cache<2.0,>=1.0",
    "time-machine<3.0.0,>=2.13.0",
    "libcst<2.0.0,>=1.1.0",
    "wagtail-factories<5.0.0,>=4.1.0",
    "pytest-xdist>=3.5.0",
    "websockets>=12.0",
    "typer>=0.12.3",
]

[tool.pdm.build]
includes = []

[tool.pdm.scripts]
update-lock = "pdm lock -G :all"

[project]
authors = [
    {name = "Python Italia"},
]
requires-python = "<3.13,>=3.11"
dependencies = [
    "django==5.0.7",
    "django-environ==0.10.0",
    "django-model-utils==4.5.1",
    "django-timezone-field==7.0",
    "certifi==2024.7.4",
    "chardet==5.2.0",
    "idna==3.7",
    "requests==2.32.3",
    "urllib3==2.2.2",
    "aniso8601==9.0.1",
    "whitenoise==6.7.0",
    "django-ordered-model==3.5",
    "uWSGI==2.0.26",
    "django-storages==1.14.4",
    "sentry-sdk==2.11.0",
    "boto3==1.34.149",
    "pycountry<20.0,>=19.8",
    "countries<1.0.0,>=0.2.0",
    "django-ses<2.0.0,>=1.0.3",
    "hashids<2.0.0,>=1.2.0",
    "django-autocomplete-light==3.9.4",
    "django-queryinspect<2.0.0,>=1.1.0",
    "lxml<5.0.0,>=4.5.0",
    "unidecode<2.0.0,>=1.1.1",
    "strawberry-graphql==0.237.1",
    "Werkzeug<2.0.0,>=1.0.1",
    "django-import-export<4.0.0,>=3.2.0",
    "dal-admin-filters==1.1.0",
    "django-markdownify==0.9.5",
    "psycopg2==2.9.9",
    "django-imagekit==5.0.0",
    "pillow==10.4.0",
    "redis[hiredis]==5.0.2",
    "google-api-python-client<3.0.0,>=2.94.0",
    "google-auth<3.0.0,>=2.22.0",
    "opencv-python<5.0.0.0,>=4.8.0.74",
    "argon2-cffi<24.0.0,>=23.1.0",
    "stripe==10.5.0",
    "djangorestframework==3.15.2",
    "l18n<2022.0,>=2021.3",
    "wagtail==6.1.3",
    "wagtail-localize==1.9",
    "celery==5.4.0",
    "wagtail-headless-preview==0.8.0",
    "Jinja2>=3.1.3",
    "icalendar>=5.0.11",
    "pyclamd>=0.4.0",
    "magika>=0.5.1",
    "tzdata>=2024.1",
    "wagtail-factories==4.2.1",
    "google-auth-oauthlib>=1.2.1",
    "PyJWT>=2.8.0",
]
name = "backend"
version = "0.1.0"
description = "PyCon Italia backend"
license = {text = "MIT"}

[project.optional-dependencies]
lambda = [
    "awslambdaric<3.0.0,>=2.0.4",
]

[tool.ruff.lint.isort]
known-first-party = [
    "integrations",
    "healthchecks",
    "files_upload",
    "video_uploads",
    "organizers",
    "association_membership",
    "google_api",
    "badges",
    "badge_scanner",
    "reviews",
    "participants",
    "checklist",
    "volunteers_notifications",
    "job_board",
    "invoices",
    "newsletters",
    "hotels",
    "notifications",
    "grants",
    "events",
    "cms",
    "sponsors",
    "pages",
    "blog",
    "voting",
    "submissions",
    "languages",
    "conferences",
    "api",
    "custom_admin",
    "schedule",
    "users"
]
