[tool]
[tool.ruff]
line-length = 88
exclude = ["migrations"]
target-version = "py313"

[tool.ruff.lint.isort]
known-first-party = [
    "integrations",
    "healthchecks",
    "files_upload",
    "video_uploads",
    "organizers",
    "association_membership",
    "google_api",
    "badges",
    "badge_scanner",
    "reviews",
    "participants",
    "checklist",
    "volunteers_notifications",
    "job_board",
    "invoices",
    "newsletters",
    "notifications",
    "grants",
    "events",
    "cms",
    "sponsors",
    "pages",
    "blog",
    "voting",
    "submissions",
    "languages",
    "conferences",
    "api",
    "custom_admin",
    "schedule",
    "users",
    "billing"
]


[project]
requires-python = ">=3.13.5"
dependencies = [
    "django==5.1.4",
    "django-environ==0.10.0",
    "django-model-utils==5.0.0",
    "django-timezone-field==7.0",
    "certifi==2024.7.4",
    "chardet==5.2.0",
    "idna==3.7",
    "requests==2.32.4",
    "urllib3==2.5.0",
    "aniso8601==9.0.1",
    "whitenoise==6.7.0",
    "django-ordered-model==3.5",
    "uwsgi==2.0.30",
    "django-storages==1.14.4",
    "sentry-sdk>=2.14.0",
    "boto3==1.35.76",
    "pycountry<20.0,>=19.8",
    "countries<1.0.0,>=0.2.0",
    "django-ses==4.1.1",
    "hashids<2.0.0,>=1.2.0",
    "django-autocomplete-light==3.9.4",
    "django-queryinspect<2.0.0,>=1.1.0",
    "lxml==6.0.0",
    "unidecode<2.0.0,>=1.1.1",
    "strawberry-graphql==0.257.0",
    "Werkzeug>=1.0.1,<4.0.0",
    "django-import-export<4.0.0,>=3.2.0",
    "dal-admin-filters==1.1.0",
    "django-markdownify==0.9.5",
    "django-imagekit==5.0.0",
    "pillow==10.4.0",
    "redis[hiredis]==6.2.0",
    "google-api-python-client<3.0.0,>=2.94.0",
    "google-auth<3.0.0,>=2.22.0",
    "argon2-cffi<24.0.0,>=23.1.0",
    "stripe==10.5.0",
    "djangorestframework==3.15.2",
    "l18n<2022.0,>=2021.3",
    "wagtail==6.2.2",
    "wagtail-localize==1.10",
    "celery==5.4.0",
    "wagtail-headless-preview==0.8.0",
    "Jinja2>=3.1.3",
    "icalendar>=5.0.11",
    "pyclamd>=0.4.0",
    "magika==0.6.2",
    "tzdata>=2024.1",
    "wagtail-factories==4.2.1",
    "google-auth-oauthlib>=1.2.1",
    "PyJWT>=2.8.0",
    "cryptography>=43.0.0",
    "openai>=1.52.0",
    "pydantic>=2.9.2",
    "gunicorn>=23.0.0",
    "tinycss2>=1.4.0",
    "pypdf>=5.1.0",
    "ipython>=8.30.0",
    "weasyprint>=63.1",
    "opencv-python-headless>=4.10.0.84",
    "psycopg[c]>=3.2.3",
]
name = "backend"
version = "0.1.0"
description = "PyCon Italia backend"
[[project.authors]]
name = "Python Italia"
[project.license]
text = "MIT"

[dependency-groups]
dev = [
    "mypy<2.0.0,>=1.2.0",
    "pytest==7.4.3",
    "pytest-cov==4.1.0",
    "pytest-django==4.6.0",
    "factory-boy==3.3.0",
    "pdbpp<1.0.0,>=0.10.3",
    "requests-mock<2.0.0,>=1.11.0",
    "pytest-mock<4.0.0,>=3.12.0",
    "pytest-cache<2.0,>=1.0",
    "time-machine<3.0.0,>=2.13.0",
    "libcst<2.0.0,>=1.1.0",
    "wagtail-factories<5.0.0,>=4.1.0",
    "pytest-xdist>=3.5.0",
    "websockets>=12.0",
    "typer>=0.12.3",
    "django-debug-toolbar>=5.0.1",
]
