[tool]
[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "wagtail-factories>=4.0.0",
    "pytest>=7.2.2",
    "factory-boy>=3.2.1",
    "pytest-factoryboy>=2.5.1",
    "pytest-django>=4.5.2",
    "pytest-cov>=4.0.0",
]

[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Marco Acierno", email = "marcoaciernoemail@gmail.com"},
]
dependencies = [
    "wagtail>=4.2",
    "Django>=4.1.7",
    "wagtail-localize>=1.5",
    "strawberry-graphql>=0.103.0",
    "django-environ>=0.10.0",
    "django-storages[azure]>=1.13.2",
    "gunicorn>=20.1.0",
    "psycopg2>=2.9.5",
]
requires-python = ">=3.11"
license = {text = "MIT"}

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE="cms.settings.dev"
addopts = "--failed-first -vv -s -l --cov-report term-missing --cov=."
