[tool]
[tool.pdm]
[tool.pdm.scripts]
migrate = "python manage.py migrate"
[tool.pdm.dev-dependencies]
dev = [
    "wagtail-factories>=4.0.0",
    "pytest>=7.2.2",
    "factory-boy>=3.2.1",
    "pytest-factoryboy>=2.5.1",
    "pytest-django>=4.5.2",
    "pytest-cov>=4.0.0",
    "respx>=0.18.2",
]

[project]
name = ""
version = ""
description = ""
authors = [{ name = "Python Italia", email = "help@pycon.it" }]
dependencies = [
    "wagtail==5.1.1",
    "django==4.2.5",
    "wagtail-localize==1.5.2",
    "strawberry-graphql==0.209.1",
    "django-environ==0.11.2",
    "django-storages[azure]==1.14",
    "gunicorn==21.2.0",
    "psycopg2==2.9.7",
    "pythonit-toolkit>=0.1.85",
    "whitenoise==6.5.0",
    "sentry-sdk[django]==1.31.0",
    "httpx>=0.20.0",
]
requires-python = ">=3.11"
license = { text = "MIT" }

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "cms.settings.dev"
addopts = "--failed-first -vv -s -l --cov-report term-missing --cov=. --reuse-db --no-migrations"
norecursedirs = ".git htmlcov tmp*"
