[tool.poetry]
name = "users"
version = "0.1.0"
description = ""
authors = ["Python Italia"]

[tool.poetry.dependencies]
python = "^3.11"
starlette = "^0.14.1"
uvicorn = {extras = ["standard"], version = "^0.21.1"}
strawberry-graphql = "^0.90"
SQLAlchemy = "1.4.2"
alembic = "^1.5.2"
asyncpg = "^0.28.0"
PyJWT = "2.0.1"
pydantic = "^1.7.3"
email-validator = "^1.1.2"
argon2-cffi = "^20.1.0"
httpx = "0.20.0"
Authlib = "^0.15.3"
itsdangerous = "^1.1.0"
mangum = "^0.10.0"
pythonit-toolkit = "0.1.81"
graphql-core = "^3.1.5"
sentry-sdk = "^1.1.0"
toml = "^0.10.2"
awslambdaric = {version = "^2.0.4", optional = true}
psycopg2 = "^2.9.5"
gunicorn = "^20.1.0"

[tool.poetry.extras]
lambda = ["awslambdaric"]

[tool.poetry.group.dev.dependencies]
ward = "^0.67.2b0"
pdbpp = "^0.10.3"
requests = "^2.31.0"
taskipy = "^1.11.0"
factory-boy = "^3.2.1"
asgi-lifespan = "^2.1.0"
coverage = "^7.2.7"
time-machine = "^2.11.0"

[tool.taskipy.tasks]
server = "uvicorn main:wrapped_app --port 8050 --reload"
test = "RUNNING_TESTS=1 python scripts/prepare_db.py && RUNNING_TESTS=1 coverage run -m ward"
"test:coverage" = "task test || coverage xml -i && coverage xml -i"
migrate = "alembic upgrade head"
makemigrations = "alembic revision --autogenerate -m"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "if typing.TYPE_CHECKING:",
]

[tool.coverage.run]
branch = true
include = [
    "users/*",
]
