[tool.poetry]
name = "users"
version = "0.1.0"
description = ""
authors = ["Marco Acierno <marcoaciernoemail@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
starlette = "^0.14.1"
uvicorn = "^0.13.3"
strawberry-graphql = "^0.44.12"
SQLAlchemy = "1.4.0b1"
alembic = "^1.5.2"
psycopg2 = "^2.8.6"
asyncpg = "^0.21.0"
PyJWT = "^2.0.1"
pydantic = "^1.7.3"
email-validator = "^1.1.2"
invoke = "^1.5.0"
argon2-cffi = "^20.1.0"

[tool.poetry.dev-dependencies]
pdbpp = "^0.10.2"
ward = "^0.48.0-beta.0"
requests = "^2.25.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
