[tool.poetry]
name = "users"
version = "0.1.0"
description = ""
authors = ["Marco Acierno <marcoaciernoemail@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
starlette = "^0.14.1"
uvicorn = "^0.13.3"
strawberry-graphql = "0.45.1"
SQLAlchemy = "1.4.0b1"
alembic = "^1.5.2"
psycopg2 = "^2.8.6"
asyncpg = "^0.21.0"
PyJWT = "^2.0.1"
pydantic = "^1.7.3"
email-validator = "^1.1.2"
argon2-cffi = "^20.1.0"
httpx = "^0.16.1"

[tool.poetry.dev-dependencies]
pdbpp = "^0.10.2"
ward = "^0.48.0-beta.0"
requests = "^2.25.1"
taskipy = "^1.6.0"
factory-boy = "^3.2.0"
asgi-lifespan = "^1.0.1"

[tool.taskipy.tasks]
server = "uvicorn main:app --port 8050 --reload"
test = "RUNNING_TESTS=1 python tests/prepare_db.py && RUNNING_TESTS=1 ward"
"test:debug" = "poetry run task test --no-capture-output"
migrate = "alembic upgrade head"
makemigrations = "alembic revision --autogenerate -m"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
